--- a/AppGuiaCurso/AppGuiaCurso/App.xaml
+++ b/AppGuiaCurso/AppGuiaCurso/App.xaml
@@ -1,8 +1,25 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <Application xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:d="http://xamarin.com/schemas/2014/forms/design"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             mc:Ingnorable="d"
              x:Class="AppGuiaCurso.App">
     <Application.Resources>
 
-    </Application.Resources>
+        <ResourceDictionary>
+            <Style x:Key="botaoVermelho" TargetType="Button">
+                <Setter Property="BackgroundColor" Value="#AB0209" />
+                <Setter Property="TextColor" Value="#FFF" />
+                <Setter Property="CornerRadius" Value="5" />
+            </Style>
+
+            <Style x:Key="botaoCinza" TargetType="Button">
+                <Setter Property="BackgroundColor" Value="#3E474c" />
+                <Setter Property="TextColor" Value="#FFFFFF" />
+                <Setter Property="CornerRadius" Value="5" />
+            </Style>
+        </ResourceDictionary>
+     
+    </Application.Resources>    
 </Application>
