--- a/AppGuiaCurso/AppGuiaCurso/MainPage.xaml
+++ b/AppGuiaCurso/AppGuiaCurso/MainPage.xaml
@@ -1,24 +1,34 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
+<MasterDetailPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="AppGuiaCurso.MainPage">
 
-    <StackLayout>
-        <Frame BackgroundColor="#2196F3" Padding="24" CornerRadius="0">
-            <Label Text="Welcome to Xamarin.Forms!" HorizontalTextAlignment="Center" TextColor="White" FontSize="36"/>
-        </Frame>
-        <Label Text="Start developing now" FontSize="Title" Padding="30,10,30,10"/>
-        <Label Text="Make changes to your XAML file and save to see your UI update in the running app with XAML Hot Reload. Give it a try!" FontSize="16" Padding="30,0,30,0"/>
-        <Label FontSize="16" Padding="30,24,30,0">
-            <Label.FormattedText>
-                <FormattedString>
-                    <FormattedString.Spans>
-                        <Span Text="Learn more at "/>
-                        <Span Text="https://aka.ms/xamarin-quickstart" FontAttributes="Bold"/>
-                    </FormattedString.Spans>
-                </FormattedString>
-            </Label.FormattedText>
-        </Label>
-    </StackLayout>
+    <MasterDetailPage.Master>
+        <ContentPage Title="Menu">
+            <Grid BackgroundColor="#3E474C">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="160" />
+                    <RowDefinition Height="*" />
+                </Grid.RowDefinitions>
 
-</ContentPage>
+                <StackLayout Grid.Row="0" BackgroundColor="#F3F2F0" Padding="10" Margin="10" HorizontalOptions="FillAndExpand" >
+                    <Image Source="" Aspect="AspectFit" />
+                </StackLayout>
+
+                <StackLayout Grid.Row="1" Spacing="10" Margin="10" Padding="10" BackgroundColor="#F3F2F0">
+                    <Button Text="Inicial" Clicked="Open_Inicial" Style="{ StaticResource botaoVermelho }" />
+                    <Button Text="Primeiro Ano" Clicked="Open_Primeiro" Style="{ StaticResource botaoCinza }" />
+                    <Button Text="Segundo Ano" Clicked="Open_Segundo" Style="{ StaticResource botaoCinza }" />
+                    <Button Text="Terceiro Ano" Clicked="Open_Terceiro" Style="{ StaticResource botaoCinza }" />
+                    <Button Text="Vestibulinho" Clicked="Open_Vestibulinho" Style="{ StaticResource botaoVermelho }" />
+                    <Button Text="Contato" Clicked="Open_Contato" Style="{ StaticResource botaoVermelho }" />
+                </StackLayout>
+            </Grid>
+        </ContentPage>
+    </MasterDetailPage.Master>
+
+    <MasterDetailPage.Detail>
+        <NavigationPage>
+        </NavigationPage>
+    </MasterDetailPage.Detail>
+</MasterDetailPage>
