--- a/AppGuiaCurso/AppGuiaCurso/App.xaml
+++ b/AppGuiaCurso/AppGuiaCurso/App.xaml
@@ -1,9 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <Application xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:d="http://xamarin.com/schemas/2014/forms/design"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             mc:Ingnorable="d"
              x:Class="AppGuiaCurso.App">
     <Application.Resources>
 
@@ -18,6 +15,10 @@
                 <Setter Property="BackgroundColor" Value="#3E474c" />
                 <Setter Property="TextColor" Value="#FFFFFF" />
                 <Setter Property="CornerRadius" Value="5" />
+            </Style>
+
+            <Style x:Key="textoCentralizado" TargetType="Label">
+                <Setter Property="HorizontalTextAlignment" Value="Center" />
             </Style>
         </ResourceDictionary>
      
