--- a/AppGuiaCurso/AppGuiaCurso/Inicial.xaml
+++ b/AppGuiaCurso/AppGuiaCurso/Inicial.xaml
@@ -1,12 +1,27 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="AppGuiaCurso.Inicial">
+             x:Class="AppGuiaCurso.Inicial"
+             BackgroundColor="#F3F2F0"
+             Title="App guia do curso de DS">
     <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
-        </StackLayout>
+        
+        <ScrollView>
+
+            <StackLayout Padding="10">
+                <Label Text="Bem-vindo ao guia do curso de Desenvolvimento de Sistemas" FontSize="Medium"
+                       Style="{ StaticResource textoCentralizado }" />
+
+                <Label Text="O curso tem o mesmo tempo de duração que o Ensino Médio (3 anos). Desenvolvemos este App para explicar o conteúdo"
+                       FontSize="Medium" Style="{ StaticResource textoCentralizado }" />
+
+                <Label Text="Em breve na Play Store para download" TextColor="#AB0209" Style="{ StaticResource textoCentralizado }" />
+
+                <Image Source="" />
+
+                <Label Text="Este App foi desenvolvido sob a orientação do Prof. Tiago A. Silva" Style="{ StaticResource textoCentralizado }" />
+            </StackLayout>
+            
+        </ScrollView>
     </ContentPage.Content>
 </ContentPage>
