--- a/AppGuiaCurso/AppGuiaCurso/View/ComponentesSegundo.xaml
+++ b/AppGuiaCurso/AppGuiaCurso/View/ComponentesSegundo.xaml
@@ -1,12 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="AppGuiaCurso.View.ComponentesSegundo">
+             x:Class="AppGuiaCurso.View.ComponentesSegundo"
+             BackgroundColor="#F3F2F0"
+             Title="Disciplinas do segundo ano">
     <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
-        </StackLayout>
+        <ScrollView>
+            <StackLayout VerticalOptions="CenterAndExpand" Padding="10">
+                <Button Text="Programação Web II" Clicked="Button_Clicked_Web2" Style="{ StaticResource botaoCinza }" />
+                <Button Text="Programação de Aplicativos Mobile I" Clicked="Button_Clicked_Mob1" Style="{ StaticResource botaoCinza }" />
+                <Button Text="Ética e Cidadania Organizacional" Clicked="Button_Clicked_Etica" Style="{ StaticResource botaoCinza }" />
+                <Button Text="Desenvolvimento de Sistemas" Clicked="Button_Clicked_DS" Style="{ StaticResource botaoCinza }" />
+                <Button Text="Sistemas Embarcados I" Clicked="Button_Clicked_SE1" Style="{ StaticResource botaoCinza }" />
+                <Button Text="Banco de Dados II" Clicked="Button_Clicked_BD2" Style="{ StaticResource botaoCinza }" />
+            </StackLayout>
+        </ScrollView>
     </ContentPage.Content>
 </ContentPage>
