--- a/AppGuiaCurso/AppGuiaCurso/View/ComponentesTerceiro.xaml
+++ b/AppGuiaCurso/AppGuiaCurso/View/ComponentesTerceiro.xaml
@@ -1,12 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="AppGuiaCurso.View.ComponentesTerceiro">
+             x:Class="AppGuiaCurso.View.ComponentesTerceiro"
+             BackgroundColor="#F3F2F0"
+             Title="Disciplinas do terceiro ano">
     <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
-        </StackLayout>
+        <ScrollView>
+            <StackLayout VerticalOptions="CenterAndExpand" Padding="10">
+                <Button Text="Programação Web III" Clicked="Button_Clicked_Web3" Style="{ StaticResource botaoCinza }" />
+                <Button Text="Programação de Aplicativos Mobile II" Clicked="Button_Clicked_Mob2" Style="{ StaticResource botaoCinza }" />
+                <Button Text="Internet, Protocolos e Segurança de Sistemas da informação" Clicked="Button_Clicked_IPS" Style="{ StaticResource botaoCinza }" />
+                <Button Text="Planejamento e Desenvolvimento do Trabalho de Conclusão de Curso (TCC) 
+                        em Desenvolvimento de Sistemas" Clicked="Button_Clicked_TCC" Style="{ StaticResource botaoCinza }" />
+                <Button Text="Sistemas Embarcados II" Clicked="Button_Clicked_SE2" Style="{ StaticResource botaoCinza }" />
+                <Button Text="Qualidade e Teste de Software" Clicked="Button_Clicked_QTS" Style="{ StaticResource botaoCinza }" />
+            </StackLayout>
+        </ScrollView>
     </ContentPage.Content>
 </ContentPage>
