--- a/AppGuiaCurso/AppGuiaCurso/View/ComponentesPrimeiro.xaml
+++ b/AppGuiaCurso/AppGuiaCurso/View/ComponentesPrimeiro.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="AppGuiaCurso.View.ComponentesPrimeiro"
              BackgroundColor="#F3F2F0"
-             Title="Disciplinas do primeiro ano">
+             Title="Disciplinas do Primeiro Ano">
     <ContentPage.Content>
         <ScrollView>
             <StackLayout VerticalOptions="CenterAndExpand" Padding="10">
