--- a/AppGuiaCurso/AppGuiaCurso/View/VerComponente.xaml
+++ b/AppGuiaCurso/AppGuiaCurso/View/VerComponente.xaml
@@ -1,12 +1,31 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="AppGuiaCurso.View.VerComponente">
+             x:Class="AppGuiaCurso.View.VerComponente"
+             BackgroundColor="#F3F2F0"
+             Title="Detalhes do Componente">
     <ContentPage.Content>
         <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
+            <ScrollView>
+                <StackLayout Padding="20">
+
+                    <Label Text="{Binding Nome}" HorizontalTextAlignment="Center" FontAttributes="Bold"
+                           Margin="0, 0, 0, 30" TextColor="#Ab0209" FontSize="Title" />
+
+                    <Label Text="Atribuições e Responsabilidades" HorizontalTextAlignment="Center" TextColor="#F3F2F0"
+                           BackgroundColor="#3E474C" FontSize="Large" />
+
+                    <Label Text="{Binding AtribuicoesResponsabilidades}" HorizontalTextAlignment="Center" FontSize="Medium"
+                           Margin="0, 0, 0, 30" />
+
+                    <Label Text="Valores e Atitudes" HorizontalTextAlignment="Center" TextColor="#F3F2F0"
+                           BackgroundColor="#3E474C" FontSize="Large" />
+
+                    <Label Text="{Binding ValoresAtitudes}" HorizontalTextAlignment="Center" FontSize="Medium"
+                           Margin="0, 0, 0, 30" />
+
+                </StackLayout>
+            </ScrollView>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
