--- a/AppGuiaCurso/AppGuiaCurso/Inicial.xaml
+++ b/AppGuiaCurso/AppGuiaCurso/Inicial.xaml
@@ -2,24 +2,30 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="AppGuiaCurso.Inicial"
-             BackgroundColor="#F3F2F0"
+             BackgroundColor="White"
              Title="App guia do curso de DS">
     <ContentPage.Content>
-        
-        <ScrollView>
 
-            <StackLayout Padding="10">
+        <ScrollView>
+            <ScrollView.Background>
+                <LinearGradientBrush EndPoint="0,1">
+                    <GradientStop Color="#White" Offset="0.5" />
+                    <GradientStop Color="#A9A9A9" Offset="1.0" />
+                </LinearGradientBrush>    
+            </ScrollView.Background>
+            
+            <StackLayout Padding="10" VerticalOptions="CenterAndExpand">
                 <Label Text="Bem-vindo ao guia do curso de Desenvolvimento de Sistemas" FontSize="Medium"
-                       Style="{ StaticResource textoCentralizado }" />
+                       Style="{ StaticResource textoCentralizado }" TextColor="Black"/>
 
                 <Label Text="O curso tem o mesmo tempo de duração que o Ensino Médio (3 anos). Desenvolvemos este App para explicar o conteúdo"
-                       FontSize="Medium" Style="{ StaticResource textoCentralizado }" />
+                       FontSize="Medium" Style="{ StaticResource textoCentralizado }" TextColor="Black" />
 
-                <Label Text="Em breve na Play Store para download" TextColor="#AB0209" Style="{ StaticResource textoCentralizado }" />
+                <Label Text="Em breve na Play Store para download" TextColor="Red" Style="{ StaticResource textoCentralizado }" />
 
                 <Image Source="" />
 
-                <Label Text="Este App foi desenvolvido sob a orientação do Prof. Tiago A. Silva" Style="{ StaticResource textoCentralizado }" />
+                <Label Text="Este App foi desenvolvido sob a orientação do Prof. Tiago A. Silva" Style="{ StaticResource textoCentralizado }" TextColor="Black" />
             </StackLayout>
             
         </ScrollView>
