--- a/AppGuiaCurso/AppGuiaCurso/View/ComponentesTerceiro.xaml
+++ b/AppGuiaCurso/AppGuiaCurso/View/ComponentesTerceiro.xaml
@@ -2,17 +2,23 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="AppGuiaCurso.View.ComponentesTerceiro"
-             BackgroundColor="#F3F2F0"
+             BackgroundColor="White"
              Title="Disciplinas do Terceiro Ano">
     <ContentPage.Content>
         <ScrollView>
+            <ScrollView.Background>
+                <LinearGradientBrush EndPoint="0,1">
+                    <GradientStop Color="White" Offset="0.5" />
+                    <GradientStop Color="#A9A9A9" Offset="1.0" />
+                </LinearGradientBrush>
+            </ScrollView.Background>
+            
             <StackLayout VerticalOptions="CenterAndExpand" Padding="10">
                 <Button Text="Programação Web III" Clicked="Button_Clicked_Web3" Style="{ StaticResource botaoCinza }" />
                 <Button Text="Programação de Aplicativos Mobile II" Clicked="Button_Clicked_Mob2" Style="{ StaticResource botaoCinza }" />
                 <Button Text="Internet, Protocolos e Segurança de Sistemas da Informação" Clicked="Button_Clicked_IPS" Style="{ StaticResource botaoCinza }" />
                 <Button Text="Planejamento e Desenvolvimento do Trabalho de Conclusão de Curso (TCC) 
                         em Desenvolvimento de Sistemas" Clicked="Button_Clicked_TCC" Style="{ StaticResource botaoCinza }" />
-                <Button Text="Sistemas Embarcados II" Clicked="Button_Clicked_SE2" Style="{ StaticResource botaoCinza }" />
                 <Button Text="Qualidade e Teste de Software" Clicked="Button_Clicked_QTS" Style="{ StaticResource botaoCinza }" />
             </StackLayout>
         </ScrollView>
