--- a/AppGuiaCurso/AppGuiaCurso/View/Contato.xaml
+++ b/AppGuiaCurso/AppGuiaCurso/View/Contato.xaml
@@ -1,12 +1,33 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="AppGuiaCurso.View.Contato">
+             x:Class="AppGuiaCurso.View.Contato"
+             BackgroundColor="White"
+             Title="Contato">
     <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
+        
+    <StackLayout>
+            <StackLayout.Background>
+                <LinearGradientBrush EndPoint="0,1">
+                    <GradientStop Color="White" Offset="0.5" />
+                    <GradientStop Color="#A9A9A9" Offset="1.0" />
+                </LinearGradientBrush>
+            </StackLayout.Background>
+
+            <StackLayout VerticalOptions="CenterAndExpand" Padding="10">
+
+            <Label Text="ETEC Joaquim Ferreira do Amaral" FontSize="Title" FontAttributes="Bold"
+                  VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand" TextColor="Black" />
+
+            <Label Text="R. Humaitá, 1090 - Centro, Jaú, SP, 17201-320" VerticalOptions="CenterAndExpand"
+                   HorizontalOptions="CenterAndExpand" TextColor="Black" FontSize="Medium"/>
+
+            <Button Text="Tel: (14) 3622-3566" Margin="10" Clicked="Button_Clicked" Style="{ StaticResource botaoVermelho }" />
+
+            <Label Text="E-mail: e070dir@cps.sp.gov.br" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand" TextColor="Black" FontSize="Medium"/>
+
         </StackLayout>
+    </StackLayout>
+        
     </ContentPage.Content>
 </ContentPage>
