--- a/AppGuiaCurso/AppGuiaCurso/View/Vestibulinho.xaml
+++ b/AppGuiaCurso/AppGuiaCurso/View/Vestibulinho.xaml
@@ -1,12 +1,23 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="AppGuiaCurso.View.Vestibulinho">
+             x:Class="AppGuiaCurso.View.Vestibulinho"
+             Title="Vestibulinho">
     <ContentPage.Content>
         <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
+            <StackLayout.Background>
+                <LinearGradientBrush EndPoint="0,1">
+                    <GradientStop Color="White" Offset="0.5" />
+                    <GradientStop Color="#A9A9A9" Offset="1.0" />
+                </LinearGradientBrush>
+            </StackLayout.Background>
+
+            <StackLayout VerticalOptions="CenterAndExpand" Padding="10">
+                <Label Text="FIQUE ATENTO AS DATAS, ACESSE O SITE ABAIXO" HorizontalTextAlignment="Center" FontAttributes="Bold" Margin="10"
+                   FontSize="Title" TextColor="Black"/>
+
+                <Button Text="Inscreva-se pelo site: www.vestibulinhoetec.com.br" Style="{ StaticResource botaoVermelho }" Clicked="Button_Clicked" />
+            </StackLayout>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
