--- a/AppGuiaCurso/AppGuiaCurso/Inicial.xaml
+++ b/AppGuiaCurso/AppGuiaCurso/Inicial.xaml
@@ -14,18 +14,19 @@
                 </LinearGradientBrush>    
             </ScrollView.Background>
             
-            <StackLayout Padding="10" VerticalOptions="CenterAndExpand">
+            <StackLayout Padding="10">
                 <Label Text="Bem-vindo ao guia do curso de Desenvolvimento de Sistemas" FontSize="Medium"
-                       Style="{ StaticResource textoCentralizado }" TextColor="Black"/>
+                       Style="{ StaticResource textoCentralizado }" TextColor="Black" Margin="0, 100, 0, 0"/>
 
                 <Label Text="O curso tem o mesmo tempo de duração que o Ensino Médio (3 anos). Desenvolvemos este App para explicar o conteúdo"
                        FontSize="Medium" Style="{ StaticResource textoCentralizado }" TextColor="Black" />
 
                 <Label Text="Em breve na Play Store para download" TextColor="Red" Style="{ StaticResource textoCentralizado }" />
 
-                <Image Source="" />
+                <Image x:Name="segundo_ds" Aspect="AspectFit" />
 
-                <Label Text="Este App foi desenvolvido sob a orientação do Prof. Tiago A. Silva" Style="{ StaticResource textoCentralizado }" TextColor="Black" />
+                <Label Text="Este App foi desenvolvido sob a orientação do" Style="{ StaticResource textoCentralizado }" TextColor="Black" />
+                <Label Text="Prof. Tiago A. Silva" Style="{ StaticResource textoCentralizado }" TextColor="Black" />
             </StackLayout>
             
         </ScrollView>
